<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.agoncal.sample.mcp.migration</groupId>
  <artifactId>mcp-migration-legacy</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>MCP Migration :: Legacy</name>

  <properties>
    <maven.compiler.release>11</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <openrewrite.version>3.7.0</openrewrite.version>
    <openrewrite-maven-plugin.version>6.4.0</openrewrite-maven-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- OpenRewrite -->
      <dependency>
        <groupId>org.openrewrite.recipe</groupId>
        <artifactId>rewrite-recipe-bom</artifactId>
        <version>${openrewrite.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>javax.persistence</groupId>
      <artifactId>javax.persistence-api</artifactId>
      <version>2.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>${openrewrite-maven-plugin.version}</version>
        <configuration>
          <!--            <recipe>org.openrewrite.java.migrate.UpgradeJavaVersion</recipe> causes  Cannot invoke "java.lang.Integer.intValue()" because "v" is null -->
          <!--            <recipe>org.openrewrite.java.migrate.jakarta.UpdateAnnotationAttributeJavaxToJakarta</recipe> String.lenth()-->
          <activeRecipes>
<!--            <recipe>org.openrewrite.java.migrate.BeansXmlNamespace</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.CastArraysAsListToList</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.ChangeDefaultKeyStore</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.IllegalArgumentExceptionToAlreadyConnectedException</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.JREThrowableFinalMethods</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.RemovedSecurityManagerMethods</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.ReplaceComSunAWTUtilitiesMethods</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.UseJavaUtilBase64</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.io.ReplaceFileInOrOutputStreamFinalizeWithClose</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.jakarta.ApplicationPathWildcardNoLongerAccepted</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.jakarta.RemoveBeanIsNullable</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.jakarta.UpdateBeanManagerMethods</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.jakarta.UpdateGetRealPath</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.javax.AddColumnAnnotation</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.javax.AddDefaultConstructorToEntityClass</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.javax.AddJaxwsRuntime</recipe>-->
            <recipe>org.openrewrite.java.migrate.javax.RemoveTemporalAnnotation</recipe>
<!--            <recipe>org.openrewrite.java.migrate.lang.StringFormatted</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.lang.ThreadStopUnsupported</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.lang.UseStringIsEmptyRecipe</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.lang.UseTextBlocks</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.logging.MigrateLogRecordSetMillisToSetInstant</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.logging.MigrateLoggerGlobalToGetGlobal</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.net.MigrateURLDecoderDecode</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.net.MigrateURLEncoderEncode</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.net.URLConstructorToURICreate</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.net.URLConstructorsToNewURI</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.sql.MigrateDriverManagerSetLogStream</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.util.IteratorNext</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.util.ListFirstAndLast</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.util.MigrateCollectionsSingletonList</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.util.MigrateCollectionsSingletonMap</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.util.MigrateCollectionsUnmodifiableList</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.util.UseEnumSetOf</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.util.UseLocaleOf</recipe>-->
<!--            <recipe>org.openrewrite.java.migrate.util.UseMapOf</recipe>-->
          </activeRecipes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-migrate-java</artifactId>
            <version>${openrewrite.version}</version>
          </dependency>
          <dependency>
            <groupId>org.openrewrite</groupId>
            <artifactId>rewrite-java</artifactId>
            <version>8.49.0</version>
          </dependency>
          <dependency>
            <groupId>org.openrewrite</groupId>
            <artifactId>rewrite-java-17</artifactId>
            <version>8.49.0</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
</project>
